# timeseries_annotator

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy_pypi.yml
src/ts_annotator/: __init__.py  _label.py  _widget.py  streamlit.py
src/ts_annotator/static/: index.html  renderer.js  scales.js  state.js  tokens.js  ui.js  utils.js  widget.bundle.js  widget.js
tests/: test_label.py  test_streamlit.py  test_widget.py
