[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ts-annotator"
version = "1.0.0"
description = "Interactive time series annotation widget for Marimo and Streamlit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Simon" },
]
keywords = ["time-series", "annotation", "marimo", "streamlit", "anywidget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.20"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/simon/ts-annotator"
Repository = "https://github.com/simon/ts-annotator"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_annotator"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
